--- a/Crosslands/CrosslandsDemo.Rmd
+++ b/Crosslands/CrosslandsDemo.Rmd
@@ -138,7 +138,8 @@ renderPlotly({
     wdepth$date <- tidy$date
     wdepth <- wdepth %>% filter(DataValue != 0)
     wdepth <- wdepth %>% filter(DataValue != 9999)
-    wdepth <- wdepth %>% filter(DataValue < 4000) 
+    wdepth <- wdepth %>% filter(DataValue < 4000)
+    wdepth <- wdepth %>% filter(DataValue > 1000)
     wdepth$Depth = (4000 - wdepth$DataValue)/1000
     #wdepth_dmax <- wdepth %>% group_by(date) %>% summarise(maxDepth=max(Depth))
     mindate <- min(wdepth$datetime)
@@ -152,7 +153,7 @@ renderPlotly({
 
     p <- ggplot(wdepth,aes(x=datetime, y=Depth)) + 
             geom_point(colour="steelblue", size=0.5) +
-            geom_line(colour="grey70", alpha=0.5, linetype="dashed") +
+            geom_line(colour="grey70", alpha=0.5, linetype="dotted") +
             theme_minimal() + 
             theme(panel.background = element_rect(colour=NA, fill="grey97")) + 
             xlab("Date") + 
@@ -173,7 +174,7 @@ renderPlotly({
 
     p <- ggplot(btemp, aes(x=datetime, y=DataValue)) +
           geom_point(colour="grey30", size=0.5) +
-          geom_line(colour="grey70",alpha=0.5, linetype="dashed") +
+          geom_line(colour="grey70",alpha=0.5, linetype="dotted") +
           theme_minimal() + 
           theme(panel.background = element_rect(colour=NA, fill="grey97")) + 
           xlab("Date") + 
@@ -195,7 +196,7 @@ renderPlotly({
   
   p <- ggplot(btemp, aes(x=datetime, y=DataValue)) +
     geom_point(colour="firebrick3", size=0.5) +
-    geom_line(colour="grey70",alpha=0.5, linetype="dashed") +
+    geom_line(colour="grey70",alpha=0.5, linetype="dotted") +
     theme_minimal() + 
     theme(panel.background = element_rect(colour=NA, fill="grey97")) + 
     xlab("Date") + 
@@ -219,7 +220,7 @@ renderPlotly({
   
   p <- ggplot(btemp, aes(x=datetime, y=DataValue)) +
     geom_point(colour="chartreuse4", size=0.5) +
-    geom_line(colour="grey70",alpha=0.5, linetype="dashed") +
+    geom_line(colour="grey70",alpha=0.5, linetype="dotted") +
     theme_minimal() + 
     theme(panel.background = element_rect(colour=NA, fill="grey97")) + 
     xlab("Date") + 
