--- a/Crosslands/CrosslandsDemo.Rmd
+++ b/Crosslands/CrosslandsDemo.Rmd
@@ -66,11 +66,11 @@ wdepth <- GetValues(server, siteCode="odm2timeseries:160065_Crosslands", variabl
 
 ```{r echo=FALSE, warning = FALSE}
 
-vars <- c('Depth', 'Board Temperature', 'Air Temperature', 'Water Temperature')
+vars <- c('Depth', 'Board Temperature', 'Air Temperature', 'Water Temperature', 'Humidity')
 
 inputPanel(
 
-    column(12,h4("Measurement:"),
+    column(12, h4("Measurement:"),
           selectizeInput("Var", "", vars)
     )
 )
@@ -95,10 +95,10 @@ renderPlotly({
     tidy$date <- as.POSIXct(strptime(tidy$date, format="%Y-%m-%d"))-11*60*60
     wdepth$datetime <- tidy$datetime
     wdepth$date <- tidy$date
-    wdepth <- wdepth %>% filter(DataValue != 0)
-    wdepth <- wdepth %>% filter(DataValue != 9999)
-    wdepth <- wdepth %>% filter(DataValue < 4000)
-    wdepth <- wdepth %>% filter(DataValue > 1000)
+    wdepth <- wdepth %>% filter(DataValue != 0) #keep non zero values
+    wdepth <- wdepth %>% filter(DataValue != 9999) # error code from sensor
+    wdepth <- wdepth %>% filter(DataValue < 4000) # 
+    wdepth <- wdepth %>% filter(DataValue > 1000) # depths greater than 3 m
     wdepth$Depth = (4000 - wdepth$DataValue)/1000
     #wdepth_dmax <- wdepth %>% group_by(date) %>% summarise(maxDepth=max(Depth))
     mindate <- min(wdepth$datetime)
@@ -118,6 +118,7 @@ renderPlotly({
             xlab("Date") + 
             ylab("Water Depth (m)") +
             xlim(mindate, Sys.time())
+    p
     plotly_p <- ggplotly(p, dynamicTicks=TRUE) %>% layout(margin=list(r=20, l=60, t=20, b=50))
     plotly_p
     
@@ -174,7 +175,7 @@ renderPlotly({
   tidy$date <- as.POSIXct(strptime(tidy$date, format="%Y-%m-%d"))-11*60*60
   btemp$date <- tidy$date
   btemp$datetime <- tidy$datetime
-  btemp <- filter(btemp, DataValue <90000)
+  btemp <- filter(btemp, DataValue < 90000)
   btemp$DataValue <- btemp$DataValue*9/5+32
   
   p <- ggplot(btemp, aes(x=datetime, y=DataValue)) +
@@ -189,7 +190,32 @@ renderPlotly({
   
   plotly_p <- ggplotly(p, dynamicTicks=TRUE) %>% layout(margin=list(r=20, l=60, t=20, b=50))
   plotly_p
-}
+  
+  } else if(input$Var == "Humidity") {
+    
+  humidity <- GetValues(server, siteCode="odm2timeseries:160065_Crosslands", variableCode="odm2timeseries:Seeed_BME280_humidity", Sys.Date()-7,endDate=Sys.Date()+2)
+  tidy <- separate(humidity, time, into=c("date", "time"), sep="T")
+  tidy$datetime <- paste(tidy$date, " ", tidy$time,sep="")
+  tidy$datetime <- as.POSIXct(strptime(tidy$datetime,format="%Y-%m-%d %H:%M:%S"))-11*60*60
+  tidy$date <- as.POSIXct(strptime(tidy$date, format="%Y-%m-%d"))-11*60*60
+  humidity$date <- tidy$date
+  humidity$datetime <- tidy$datetime
+  
+  p <- ggplot(humidity, aes(x=datetime, y=DataValue)) +
+    geom_point(colour="#424949", size=0.5) +
+    geom_line(colour="grey70",alpha=0.5, linetype="dotted") +
+    theme_minimal() + 
+    theme(panel.background = element_rect(colour=NA, fill="grey97")) + 
+    xlab("Date") + 
+    ylab("Humidity (%)")
+  p
+  
+  
+  plotly_p <- ggplotly(p, dynamicTicks=TRUE) %>% layout(margin=list(r=20, l=60, t=20, b=50))
+  plotly_p
+  } 
+  
+  
 })
 
 
